--- a/deploy-microbosh.html.md.erb
+++ b/deploy-microbosh.html.md.erb
@@ -88,10 +88,12 @@ Using a light BOSH stemcell spares you from the "uploading a stemcell" step late
 In the directory that contains files for your MicroBOSH deployment (`deployments-aws/boshtest` in these examples),
 create a text file named `bosh_environment`.
 
-For each item of information enumerated in [Set up a deployment area in the cloud](#cloud) above,
+* For each item of information enumerated [above](#cloud),
 add a line to the file, of the form:
 
-    `export <BOSH_environment_variable>=<value>`
+```
+export <BOSH_environment_variable>=<value>
+```
 
 Use the information you have [collected](#cloud) to identify values to assign.
 
@@ -106,11 +108,11 @@ export BOSH_VPC_ACCESS_KEY_ID=12345abcde12345abcde12345
 export BOSH_VPC_SECRET_ACCESS_KEY=12345abcde22345abcde32345abcde42345abcde
 </pre>
 
-Now use the file to generate the BOSH environment variables:
+* Now use the file to generate the BOSH environment variables:
 
     `source bosh_environment`
 
-Check to see that the BOSH environment variables exist:
+* Check to see that the BOSH environment variables exist:
 
     `env | grep BOSH`
 
