edit per pairing on bootstrap item

--- a/deploy-microbosh.html.md.erb
+++ b/deploy-microbosh.html.md.erb
@@ -116,7 +116,10 @@ export BOSH_VPC_SECRET_ACCESS_KEY=12345abcde22345abcde32345abcde42345abcde
 
 ### <a id="bootstrap"></a> AWS-only: Add bootstrap capability  ###
 
-* _What to say here? Is this the right place?_
+_What to say here? Is this the right place?_
+
+1. `cd` into the top-level directory you created (`deployments-aws` in these examples).
+1. Run this command to _how to phrase?_
 
     `aws create bootstrap`
 
