edit per pairing on manifest creation

--- a/deploy-microbosh.html.md.erb
+++ b/deploy-microbosh.html.md.erb
@@ -134,7 +134,7 @@ For AWS, there are BOSH CLI commands which generate the manifest for you.
 
 For example:
 
-1. cd into the _which?_ directory.
+1. cd into the directory you created for manifests (`manifests` in these examples).
 1. Generate the manifest:
 
     `bosh aws generate micro_bosh aws_vpc_receipt.yml aws_route53_receipt.yml`
