--- a/deploy-microbosh.html.md.erb
+++ b/deploy-microbosh.html.md.erb
@@ -134,7 +134,7 @@ For AWS, there are BOSH CLI commands which generate the manifest for you.
 
 For example:
 
-1. cd into the directory you created for manifests (`manifests` in these examples).
+1. `cd` into the directory you created for manifests (`manifests` in these examples).
 1. Generate the manifest:
 
     `bosh aws generate micro_bosh aws_vpc_receipt.yml aws_route53_receipt.yml`
@@ -158,8 +158,8 @@ Once preparation is complete, you deploy MicroBOSH in three steps.
 Before you deploy, you must set the BOSH CLI to use the correct manifest.
 This is called "setting the deployment."
 
-1. cd into the _which?_ directory.
-1. Run the `deployment`:
+1. `cd` into the directory you created for manifests (`manifests` in these examples).
+1. Set the deployment:
 
     `bosh micro deployment micro/micro_bosh.yml`
 
