--- a/deploy-microbosh.html.md.erb
+++ b/deploy-microbosh.html.md.erb
@@ -52,6 +52,8 @@ Set up a directory structure with three levels:
 * For example, you might be planning to deploy MicroBOSH on a cloud named `boshtest`, that in turn is deployed to the OpenStack IaaS.
 You would create a directory for each, such that the path to your MicroBOSH deployment could be `deploy2openstack/boshtest/micro`.
 
+<%= image_tag("bosh-directories-ex.png") %>
+
 ### <a id="stemcell"></a> Obtain a stemcell  ###
 
 [Download](http://bosh-artifacts.cfapps.io/) a stemcell that is appropriate for your preferred combination of IaaS and VM type.
