--- a/deploy-microbosh.html.md.erb
+++ b/deploy-microbosh.html.md.erb
@@ -62,11 +62,11 @@ Download to the directory of your choice, and remember its path for later use.
 
 ### <a id="manifest"></a> Create the MicroBOSH deployment manifest  ###
 
-The MicroBOSH deployment manifest is a YAML file named `micro-bosh.yml` and should reside in the directory
-named for the product it deploys (`boshtest/microbosh` in these examples).
+The MicroBOSH deployment manifest is a YAML file named `micro-bosh.yml` that should reside in the directory
+created for MicroBOSH (`boshtest/microbosh` in these examples).
 
-If you are using AWS, you can generate the manifest using special BOSH CLI commands.
-If you are using an IaaS other than AWS, you need to use a text editor to create a MicroBOSH deployment manifest.
+If you are using AWS, you can generate the manifest using the BOSH CLI.
+If you are using another IaaS, use a text editor to create the manifest.
 
 To understand general principles of BOSH deployment manifests,
 see [Creating a BOSH Deployment Manifest](./create-manifest.html).
@@ -93,6 +93,6 @@ You have two general options for verifying that your deployment was successful.
 These are:
 
 1. Start using MicroBOSH by targeting the new director and uploading software.
-A minimal "dummy release" can be useful here.
+A minimal ["dummy release"](https://github.com/abic/dummy-boshrelease) can be useful here.
 
 2. Running the BOSH Acceptance Tests (BATS), which requires advanced system administration skills.
