improved heading about Pattern

--- a/workflow.html.md.erb
+++ b/workflow.html.md.erb
@@ -63,7 +63,7 @@ You can modify an example manifest to suit your purposes, or use a tool like spi
 **Note**: This topic speaks of "a release" and "a stemcell" for the sake of simplicity,
 but BOSH also supports deploying with multiple releases and multiple stemcells.
 
-### <a id="deploy"></a> Deploying Software BOSH Pattern  ###
+### <a id="deploy"></a> The Pattern for Deploying Software with BOSH  ###
 
 To deploy software with BOSH, you perform four steps:
 
