fix images again

--- a/micro-manifest-examples/vsphere-example.html.md.erb
+++ b/micro-manifest-examples/vsphere-example.html.md.erb
@@ -93,7 +93,7 @@ the values in your manifest.
 1. Create the disk_path in the appropriate datastores
 1. Create the resource_pool (optional)
 
-![vcenter-folders](../../docs-deploying-cf/images/vcenter-folders.png)
+![vcenter-folders](../../../docs-deploying-cf/images/vcenter-folders.png)
 ![vcenter-disk-path](../docs-deploying-cf/images/vcenter-disk-path.png)
 
 * Datastore Patterns
