--- a/micro-manifest-examples/vsphere-example.html.md.erb
+++ b/micro-manifest-examples/vsphere-example.html.md.erb
@@ -93,9 +93,10 @@ the values in your manifest.
 1. Create the disk_path in the appropriate datastores
 1. Create the resource_pool (optional)
 
-![vcenter-folders](../images/vcenter-folders.png)
+<%= image_tag("vcenter-folders.png") %>
 
-![vcenter-disk-path](../images/vcenter-disk-path.png)
+<%= image_tag("vcenter-disk-path.png") %>
+
 
 * Datastore Patterns
 
