add links to examples

--- a/create-micro-manifest.html.md.erb
+++ b/create-micro-manifest.html.md.erb
@@ -2,7 +2,17 @@
 title: Creating a MicroBOSH Deployment Manifest
 ---
 
-foo
+The deployment manifest for MicroBOSH is similar the deployment manifest for BOSH,
+but much smaller.
+
+Parts of the manifest are IaaS-specific.
+Refer to the example for the IaaS you plan to use:
+
+* [AWS](./micro-manifest-examples/aws-example.html)
+* [OpenStack](./micro-manifest-examples/openstack-example.html)
+* [vSphere](./micro-manifest-examples/vsphere-example.html)
+
+_Adapt this BOSH text to MicroBOSH_
 
 ## <a id="orchestrate"></a> Specifying Orchestration ##
 
